<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.talentedasian</groupId>
	<artifactId>politics</artifactId>
	<version>1.2.0</version>
	<name>politics</name>
	<description>Project for the people</description>
	<properties>
		<java.version>16</java.version>
		<app.profiles>production,localDevelopment</app.profiles>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			  <groupId>org.springframework.boot</groupId>
			  <artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-api</artifactId>
		    <version>0.11.2</version>
		</dependency>
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-impl</artifactId>
		    <version>0.11.2</version>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-jackson</artifactId>
		    <version>0.11.2</version>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		 <dependency>
	     	<groupId>org.springdoc</groupId>
		    <artifactId>springdoc-openapi-webmvc-core</artifactId>
		    <version>1.5.9</version>
		</dependency>
   		 <dependency>
	      	<groupId>org.springdoc</groupId>
	      	<artifactId>springdoc-openapi-ui</artifactId>
	      	<version>1.5.9</version>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-params</artifactId>
		    <scope>test</scope>
		</dependency>
		<dependency> 
			<groupId>org.springframework.restdocs</groupId>
			<artifactId>spring-restdocs-mockmvc</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.testcontainers</groupId>
		    <artifactId>junit-jupiter</artifactId>
		    <version>1.15.3</version>
		    <scope>test</scope>
		</dependency>	
		<dependency>
		    <groupId>org.testcontainers</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>1.15.3</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.springframework.hateoas</groupId>
		    <artifactId>spring-hateoas</artifactId>
		</dependency>
	</dependencies>
	
	<repositories>
		<repository>
		    <id>spring-snapshot</id>
		    <name>Spring Snapshot Repository</name>
		    <url>https://repo.spring.io/snapshot</url>
		    <snapshots>
		        <enabled>true</enabled>
		    </snapshots>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin> 
				<groupId>org.asciidoctor</groupId>
				<artifactId>asciidoctor-maven-plugin</artifactId>
				<version>1.5.8</version>
				<executions>
					<execution>
						<id>generate-docs</id>
						<phase>prepare-package</phase> 
						<goals>
							<goal>process-asciidoc</goal>
						</goals>
						<configuration>
							<backend>html</backend>
							<doctype>book</doctype>
						</configuration>
					</execution>
				</executions>
			<dependencies>
				<dependency> 
					<groupId>org.springframework.restdocs</groupId>
					<artifactId>spring-restdocs-asciidoctor</artifactId>
					<version>2.0.5.RELEASE </version>
				</dependency>
			</dependencies>
			</plugin>
			<plugin> 
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration> 
							<outputDirectory>
								${project.build.outputDirectory}/static/docs
							</outputDirectory>
							<resources>
								<resource>
									<directory>
										${project.build.directory}/generated-docs
									</directory>
								</resource>
								</resources>
							</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
                    <profiles>${app.profiles}</profiles>
                </configuration>
                <executions>
		            <execution>
		                <goals>
		                    <goal>repackage</goal>
		                </goals>
		                <configuration>
		          			<outputDirectory>jars/</outputDirectory>
		        		</configuration>
		            </execution>
	       		</executions>
			</plugin>
			<plugin>
			    <groupId>org.jacoco</groupId>
			    <artifactId>jacoco-maven-plugin</artifactId>
			    <version>0.8.7</version>
			    <executions>
			        <execution>
			            <goals>
			                <goal>prepare-agent</goal>
			            </goals>
			        </execution>
			        <execution>
			            <id>jacoco-report</id>
			            <phase>test</phase>
			            <goals>
			                <goal>report</goal>
			            </goals>
			            <configuration>
			            	<excludes>
								<exclude>com/example/demo/exceptions/**</exclude>
							</excludes>
			            </configuration>
			        </execution>
			        <execution>
			        	<id>jacoco-check</id>
			        	<phase>prepare-package</phase>
			        	<goals>
			                <goal>check</goal>
			            </goals>
			            <configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>INSTRUCTION</counter>
									        <value>COVEREDRATIO</value>
									        <minimum>0.50</minimum>
										</limit>
									</limits>
								</rule>
							</rules>			            
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
			    <groupId>org.springframework.hateoas</groupId>
			    <artifactId>spring-hateoas</artifactId>
			    <version>1.4.0-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
